--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+docs/source/OLD
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,jupyternotebooks
