--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lumache"
+name = "geolayer"
 authors = [{name = "Davide De Marchi", email = "davide.de-marchi@ec.europa.eu"}]
 dynamic = ["version", "description"]
